2026-01-04 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Expand test coverage of XmlHandler, references #389

2025-12-30 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Fix bug in XmlHandler and improve test coverage

2025-08-20 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Consider only live records in uid repository, resolves #387
    * Add documentation about reaction response, resolves #386
    * Release version 8.1.3

2025-07-23 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Consider only live records in mapping utility, resolves #384
    * Prevent upgrade wizard from crashing when cruser_id field has been removed, resolves #381
    * Release version 8.1.2

2025-06-07 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Improve main exception reporting, references #380
    * Fix synchronization icon animation

2025-05-02 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Catch any exception in import reaction
    * Release version 8.1.1

2025-04-05 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Ensure timestamp is an integer, resolves #376

2025-03-26 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Add call type, deprecate context, resolves #373
    * Add event for manipulating configuration at start of run, resolves #374
    * Restore visual indicator for sorting in Data module, resolves #369
    * Release version 8.1.0

2025-03-19 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Improve delete reaction response when record is already deleted, resolves #372
    * Release version 8.0.4

2025-03-19 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Restore missing SQL definition for reactions table
    * Release version 8.0.3

    * Properly handle action class when adding a new Scheduler task in TYPO3 13, resolves #370
    * Correctly abort process when exception is thrown by step, resolves #371
    * Fix evaluation of global error status in Scheduler task
    * Release version 8.0.2
